--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -31,3 +31,27 @@ input:focus, input:active {
   color: white;
   border-bottom-color: aqua;
 }
+button {
+  display: inline-block;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  transition: background-color 0.4s;
+  cursor: pointer;
+  padding: 15px 32px;
+  border-radius: 4px;
+}
+.btn-black {
+  background-color: black;
+}
+.btn-black:hover {
+  background-color: #3657D3;
+}
+.btn-blue {
+  background-color: #3657D3;
+}
+.btn-blue:hover {
+  background-color: #CDC8CF;
+}
