--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -34,12 +34,12 @@ input {
   color: gray;
   background: transparent;
   outline: none;
-  transition: border-bottom-color 0.3s;
-
+  background: linear-gradient(#3657D3, #3657D3) bottom / 0% 1px no-repeat;
+  transition: background-size 0.6s;
   &:focus,
-  &:active {
-    color: white;
-    border-bottom-color: aqua;
+  &:active,
+  &:hover {
+    background-size: 100% 1px;
   }
 }
 button, .button {
